--- a/index.css
+++ b/index.css
@@ -86,9 +86,12 @@
 
 @media (max-width : 800px){
 
+  .menu-icon{
+    font-size : 14px;
+  }
+
   .navbar-nav a{
-  font-size : 24px;
-  font-weight : 700;
+  font-size : 18px;
   }
 
   .navbar-nav a:hover{
