--- a/index.css
+++ b/index.css
@@ -15,6 +15,10 @@
   width : 70% !important;
 }
 
+.navbar{
+  z-index : 100;
+}
+
 .navbar-nav a{
   font-size : 18px;
 }
@@ -90,6 +94,7 @@
     font-size : 14px;
   }
 
+  
   .navbar-nav a{
   font-size : 18px;
   }
